Create vendored python dependecy setup.
- Used recommendation from google docs where all packages in lib are included with the app engine build.
- Requires extra pip flag, so added ahoy pip as a command to ahoy.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -4,4 +4,7 @@ commands:
   up:
     usage: run stackbot locally.
     cmd: dev_appserver.py .
+  pip-install:
+    usage: python pip, but locally vendored.
+    cmd: pip install -t lib {{args}}
 
