Update the appengine routes so that we serve the index.html file by default.

--- a/app.yaml
+++ b/app.yaml
@@ -3,5 +3,10 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /.*
+- url: /api/q
   script: main.app
+
+- url: /
+  static_files: index.html
+  upload: index.html
+
