PROD-213: Add code to make stackbot appear in the list of search engines.
* Add OpenSearchDescriptor file which adds Stackbot into the list of search engines

--- a/app.yaml
+++ b/app.yaml
@@ -10,3 +10,7 @@ handlers:
   static_files: index.html
   upload: index.html
 
+- url: /opensearch.xml
+  static_files: opensearch.xml
+  upload: opensearch.xml
+
