PROD-216: Add ahoy command to deploy the application to the google app engine
* Command: ahoy deploy <version-number>

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -10,4 +10,6 @@ commands:
   console:
     usage: open the app engine web python console.
     cmd: open 'http://localhost:8000/console'
-
+  deploy:
+    usage: deploy the app to google app engine
+    cmd: appcfg.py -A devinci-stackbot -V {{args}} update .
