Refactor code by moving js code to external js files.
* Moved the scripts at the end of the page to confirm the standards
* Register the scripts in the app.yaml file
* New js files: script.js (holds the general javascript code)
                firebase.js (holds the firebase script code)

--- a/app.yaml
+++ b/app.yaml
@@ -14,3 +14,11 @@ handlers:
   static_files: opensearch.xml
   upload: opensearch.xml
 
+- url: /script.js
+  static_files: script.js
+  upload: script.js
+
+- url: /firebase.js
+  static_files: firebase.js
+  upload: firebase.js
+
