PROD-212: Create a general style.css file to hold the styling code.
* Register the code in app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -22,3 +22,7 @@ handlers:
   static_files: firebase.js
   upload: firebase.js
 
+- url: /style.css
+  static_files: style.css
+  upload: style.css
+
