PROD-221: Add a very basic favicon for the webpage.
* Register the favicon in app.yaml file
* Add code in the head region of index.html

--- a/app.yaml
+++ b/app.yaml
@@ -26,3 +26,6 @@ handlers:
   static_files: style.css
   upload: style.css
 
+- url: /favicon.ico
+  static_files: favicon.ico
+  upload: favicon.ico
