Use the angular2-cli tool for building the angularfire2 setup as described on https://github.com/angular/angularfire2/blob/master/docs/1-install-and-setup.md
Use the angular2-cli tool for building the angularfire2 setup as described on https://github.com/angular/angularfire2/blob/master/docs/1-install-and-setup.md

--- a/frontend/app.yml
+++ b/frontend/app.yml
@@ -23,3 +23,9 @@ handlers:
 - url: /css
   static_dir: css
 
+- url: /node_modules
+  static_dir: node_modules
+
+- url: /angularfire2
+  static_dir: node_modules/angularfire2
+
