Implement steps to setup angular fire. Steps 2,3,4,5, and 6 of the setup instructions. https://github.com/angular/angularfire2/blob/master/docs/1-install-and-setup.md

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -13,3 +13,9 @@ commands:
   deploy:
     usage: deploy the app to google app engine
     cmd: appcfg.py -A devinci-stackbot -V {{args}} update .
+  deps:
+    usage: Load and install all dependencies.
+    cmd: |
+      npm install -g angular-cli typings
+      npm install
+      typings install
