--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,8 @@ machine:
     GCLOUD_PROJECT: "continuous-deployment-circle"
 
 dependencies:
+  cache_directories:
+    - "frontend/node_modules"
   pre:
     # Download App Engine SDK
     # This is not necessary to deploy, its only necessary  to run local tests importing the App Engine SDK
