--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -28,5 +28,8 @@ commands:
       cd backend &&
       ahoy pip-install -- -r requirements.txt
   build:
-    cmd: ng build
+    cmd: cd frontent && ng build
     usage: Build all of the files necessary to serve the site into the /dist folder.
+  test:
+    cmd: cd frontend && ng test --watch=false
+    usage: Run the frontend unit tests.
