PROD-224: Use the new 'ahoy test' command instead of using ng test directly.

--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ test:
         background: true
   override:
     # run local unit tests
-    - cd frontend && npm test
+    - ahoy test
 
 #deployment:
     #staging:
