--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "karma": "1.2.0",
     "karma-chrome-launcher": "0.2.3",
     "karma-jasmine": "1.0.2",
+    "karma-junit-reporter": "^1.1.0",
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
     "tslint": "3.11.0",
