--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -8,7 +8,7 @@ commands:
       dev_appserver.py --skip_sdk_update_check=true default backend
   front-build:
     usage: build the frontend files.
-    cmd: cd default && ng build --watch=true &
+    cmd: cd default && ng build --watch=true
   pip-install:
     usage: python pip, but locally vendored.
     cmd: cd backend && pip install -t lib {{args}}
