Fix deployment based urls for the backend service and the CORS headers.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -17,7 +17,7 @@ commands:
     cmd: open 'http://localhost:8000/console'
   deploy:
     usage: deploy the app to google app engine
-    cmd: appcfg.py -A devinci-stackbot -V {{args}} update .
+    cmd: appcfg.py -A devinci-stackbot -V {{args}} update default backend
   deps-frontend:
     usage: Load and install all dependencies.
     cmd: |
