PROD-253: Improve the deployment script to appengine by making a build first, then pushing each module individually.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -17,7 +17,11 @@ commands:
     cmd: open 'http://localhost:8000/console'
   deploy:
     usage: deploy the app to google app engine
-    cmd: appcfg.py -A devinci-stackbot -V {{args}} update default backend
+    cmd: |
+      set -e
+      cd default && ng build && cd  ../
+      appcfg.py -A devinci-stackbot -V {{args}} update default
+      appcfg.py -A devinci-stackbot -V {{args}} update backend
   deps-frontend:
     usage: Load and install all dependencies.
     cmd: |
