--- a/default/package.json
+++ b/default/package.json
@@ -36,9 +36,11 @@
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "1.0.2",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "karma-junit-reporter": "^1.1.0",
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
