--- a/default/package.json
+++ b/default/package.json
@@ -18,13 +18,14 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
-    "angular-cli": "^1.0.0-beta.11-webpack.2",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
     "angular2-jwt": "^0.1.19",
     "angularfire2": "^2.0.0-beta.3-pre2",
     "core-js": "^2.4.0",
     "firebase": "^3.3.0",
     "karma-jasmine": "^0.3.8",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
