--- a/default/package.json
+++ b/default/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "angular2-webpack",
-  "version": "1.0.0",
-  "description": "A webpack starter for angular 2",
+  "name": "stackbot",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
     "build": "webpack --config webpack.config.js --progress --profile --bail",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "lint": "tslint \"src/**/*.ts\""
   },
-  "license": "MIT",
+  "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
@@ -24,32 +25,41 @@
     "angularfire2": "^2.0.0-beta.3-pre2",
     "core-js": "^2.4.0",
     "firebase": "^3.3.0",
-    "karma-jasmine": "^0.3.8",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "angular-cli": "1.0.0-beta.10",
     "angular2-template-loader": "^0.4.0",
+    "codelyzer": "0.0.26",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "ember-cli-inject-live-reload": "1.4.0",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-jasmine": "1.0.2",
+    "karma-junit-reporter": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "3.3.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
+    "ts-node": "0.5.5",
+    "tslint": "3.11.0",
+    "typescript": "^2.0.0",
+    "typings": "1.3.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0"
