--- a/default/package.json
+++ b/default/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
+    "typings": "typings",
     "build": "webpack --config webpack.config.js --progress --profile --bail",
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\""
