--- a/default/package.json
+++ b/default/package.json
@@ -4,9 +4,10 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "karma start",
+    "test": "karma start config/karma.conf.js",
+    "karma": "karma",
     "typings": "typings",
-    "build": "webpack --config webpack.config.js --progress --profile --bail",
+    "build": "rimraf dist && webpack --config webpack.config.js --progress --profile --bail",
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\""
   },
@@ -32,12 +33,11 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.10",
     "angular2-template-loader": "^0.4.0",
     "codelyzer": "0.0.26",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "ember-cli-inject-live-reload": "1.4.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
