--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -34,11 +34,11 @@ commands:
       cd backend &&
       ahoy pip-install -- -r requirements.txt
   frontend-build:
-    cmd: cd default && rm -rf dist || true && webpack --config webpack.config.js --progress --profile -—bail {{args}}
+    cmd: cd default && npm run build -- {{args}}
     usage: Build all of the files necessary to serve the site into the /dist folder.
   frontend-build-watch:
     usage: build the frontend files.
-    cmd: ahoy frontend-build -- --watch
+    cmd: ahoy frontend-build -- --watch=true
   test:
     cmd: |
       set -e
@@ -49,5 +49,5 @@ commands:
         FLAGS='--reporters=junit,progress'
       fi
       npm test $FLAGS
-      ng lint
+      npm run lint
     usage: Run the frontend unit tests.
