--- a/default/package.json
+++ b/default/package.json
@@ -2,7 +2,6 @@
   "name": "stackbot",
   "version": "0.0.0",
   "license": "MIT",
-  "angular-cli": {},
   "scripts": {
     "start": "ng serve",
     "postinstall": "typings install",
@@ -13,26 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
     "angular2-jwt": "^0.1.19",
-    "angularfire2": "2.0.0-beta.2",
-    "es6-shim": "0.35.1",
-    "firebase": "3.2.1",
+    "angularfire2": "^2.0.0-beta.3-pre2",
+    "core-js": "^2.4.0",
+    "firebase": "^3.3.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
+    "systemjs": "0.19.27",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.10",
-    "codelyzer": "0.0.20",
+    "codelyzer": "0.0.28",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -42,8 +43,8 @@
     "karma-junit-reporter": "^1.1.0",
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
-    "tslint": "3.11.0",
-    "typescript": "1.8.10",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.0",
     "typings": "1.3.1"
   }
 }
