--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -4,11 +4,11 @@ commands:
   up:
     usage: run stackbot locally.
     cmd: |
-      cd default && ng build --watch=true &
+      cd default && npm run build -- --watch=true &
       dev_appserver.py --skip_sdk_update_check=true default backend
   front-build:
     usage: build the frontend files.
-    cmd: cd default && ng build --watch=true
+    cmd: cd default && npm run build -- --watch=true
   pip-install:
     usage: python pip, but locally vendored.
     cmd: cd backend && pip install -t lib {{args}}
@@ -19,23 +19,22 @@ commands:
     usage: deploy the app to google app engine
     cmd: |
       set -e
-      cd default && ng build && cd  ../
+      cd default && npm run build && cd  ../
       appcfg.py -A devinci-stackbot -V {{args}} update default
       appcfg.py -A devinci-stackbot -V {{args}} update backend
   deps-frontend:
     usage: Load and install all dependencies.
     cmd: |
-      npm install -g angular-cli typings
-      cd default
+      #npm install -g angular-cli typings
+      cd default && rm -rf node_modules typings
       npm install
-      typings install
   deps-backend:
     usage: Load and install all backend dependencies.
     cmd: |
       cd backend &&
       ahoy pip-install -- -r requirements.txt
   build:
-    cmd: cd default && ng build
+    cmd: cd default && npm run build
     usage: Build all of the files necessary to serve the site into the /dist folder.
   test:
     cmd: |
@@ -46,6 +45,6 @@ commands:
         export JUNIT_DIR=$CIRCLE_TEST_REPORTS
         FLAGS='--reporters=junit,progress'
       fi
-      ng test --watch=false $FLAGS
-      ng lint
+      npm run test -- --watch=false $FLAGS
+      npm run lint
     usage: Run the frontend unit tests.
