--- a/default/package.json
+++ b/default/package.json
@@ -7,8 +7,10 @@
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
+    "tsc": "tsc",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
