--- a/default/package.json
+++ b/default/package.json
@@ -7,7 +7,8 @@
     "test": "karma start config/karma.conf.js",
     "karma": "karma",
     "typings": "typings",
-    "build": "rimraf dist && webpack --config webpack.config.js --progress --profile --bail",
+    "build": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "build-prod": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\""
   },
