PROD-243: Fix appengine paths not working when tying to import google.appengine.* for pylint and create a script to do that as well.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -57,7 +57,8 @@ commands:
     usage: Run the backend unit tests.
     cmd: |
       set -e
-      pylint backend
+      cd backend &&
+      pylint handlers models shared main.py
 
   test:
     usage: Run all the tests (backend and frontend)
