--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -5,7 +5,8 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+init-hook='import sys, os; PATH = os.path.abspath("."); sys.path.insert(1, PATH); import fix_appengine_paths'
+
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
