PROD-243: Add some flask endpoint tests and rename main.py to stackbot_backend.py for better clarity.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -67,7 +67,7 @@ commands:
 
       cd backend &&
       python run_tests.py $APPENGINE tests
-      pylint -E handlers models shared tests main.py
+      pylint -E handlers models shared tests stackbot_backend.py
 
   test:
     usage: Run all the tests (backend and frontend)
