PROD-243: Add the $APPENGINE env var to circle CI.

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,9 @@
 machine:
   environment:
+
+    # Setup the appengine path.
+    APPENGINE: ${HOME}/google_appengine
+
     # Add app engine sdk to pythonpath for local unit tests.
     PYTHONPATH: ${PYTHONPATH}:${HOME}/google_appengine
 
