--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -11,7 +11,7 @@ commands:
     cmd: cd default && npm run build -- --watch=true
   pip-install:
     usage: python pip, but locally vendored.
-    cmd: cd backend && pip install -t lib {{args}}
+    cmd: cd backend && pip install --ignore-installed --force-reinstall --upgrade -t lib {{args}}
   console:
     usage: open the app engine web python console.
     cmd: open 'http://localhost:8000/console'
