--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.pyc
 *.swp
 .idea
 .DS_Store
@@ -8,6 +7,9 @@ default/dist
 default/tmp
 default/index.yaml
 
-# Ignore python metadata
+# Ignore compiled python files.
+*.pyc
+# Ignore python package metadata
 backend/lib/*info
-backend/lib/**/*.pyc
+# Ignore comiled C files since these are differnt on linux.
+backend/lib/**/*.so
