PROD-265: Add a simple node proxy server that we can use locally to test a stackbot.com release.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -75,3 +75,7 @@ commands:
       set -e
       ahoy test-backend
       ahoy test-frontend
+  proxy:
+    usage: Run a local proxy to use a dev version of stackbot.
+    cmd: |
+      cd default && sudo node proxy-server.js
