--- a/default/package.json
+++ b/default/package.json
@@ -28,6 +28,7 @@
     "angularfire2": "^2.0.0-beta.3-pre2",
     "core-js": "^2.4.0",
     "firebase": "^3.3.0",
+    "http-proxy": "^1.14.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
