--- a/default/app.yml
+++ b/default/app.yml
@@ -10,6 +10,14 @@ handlers:
   static_files: opensearch.xml
   upload: opensearch.xml
 
+- url: /robots.txt
+  static_files: robots.txt
+  upload: robots.txt
+
+- url: /favicon.ico
+  static_files: favicon.ico
+  upload: favicon.ico
+
 - url: (.*)/
   static_files: dist\1/index.html
   upload: dist
