--- a/default/package.json
+++ b/default/package.json
@@ -29,7 +29,9 @@
     "core-js": "^2.4.0",
     "firebase": "^3.3.0",
     "http-proxy": "^1.14.0",
+    "json-loader": "^0.5.4",
     "moment": "^2.14.1",
+    "moment-timezone": "^0.5.5",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
