--- a/default/package.json
+++ b/default/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
+    "@types/moment-timezone": "^0.2.30",
     "angular2-jwt": "0.1.19",
     "angularfire2": "^2.0.0-beta.3-pre2",
     "core-js": "^2.4.0",
