PROD-268: Moved icons our of the src folder since that is excluded from upload (even though it works locally).

--- a/default/app.yml
+++ b/default/app.yml
@@ -23,8 +23,8 @@ handlers:
   upload: dist
 
 - url: /(.*)$
-  static_files: src/icons/\1
-  upload: src/icons
+  static_files: icons/\1
+  upload: icons
 
 
 skip_files:
